Add progress to slidethis carousel

--- a/app/_includes/home/best-sale.html
+++ b/app/_includes/home/best-sale.html
@@ -24,60 +24,8 @@
         </div>
     </div>
     <div class="best-sale-slider">
-        <!-- <ul class="bxslider">
-            <li>
-                <div class="container best-sale-container">
-                    <div class="col4">
-                        <div class="sale-column active">
-                            <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
-                            <h3>Python J100</h3>
-                            <ul class="list">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>Adipisicing elit sed do eiusmod</li>
-                                <li>Incididunt labore dolore magna</li>
-                            </ul>
-                            <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                            <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
-                            <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
-                            <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
-                        </div>
-                    </div>
-                    <div class="col4">
-                        <div class="sale-column">
-                            <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
-                            <h3>Python J100</h3>
-                            <ul class="list">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>Adipisicing elit sed do eiusmod</li>
-                                <li>Incididunt labore dolore magna</li>
-                            </ul>
-                            <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                            <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
-                            <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
-                            <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
-                        </div>
-                    </div>
-                    <div class="col4-last">
-                        <div class="sale-column">
-                            <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
-                            <h3>Python J100</h3>
-                            <ul class="list">
-                                <li>Lorem ipsum dolor sit amet</li>
-                                <li>Adipisicing elit sed do eiusmod</li>
-                                <li>Incididunt labore dolore magna</li>
-                            </ul>
-                            <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                            <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
-                            <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
-                            <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li><div style=" height: 300px; text-align: center; background-color: blue; width: auto;"></div></li>
-        </ul> -->
-        <ul class="container best-sale-container slidethis pafClase" data-slidethis="id|awards,animate|true,delay|20,speed|300">
-            <li class="col4">
+        <ul class="container best-sale-slider-container slidethis pafClase" data-slidethis="id|bikes,animate|true,delay|20,speed|300">
+            <li class="col4 sale-slider-column sale-slider-column">
                 <div class="sale-column active">
                     <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
                     <h3>Python J100</h3>
@@ -92,7 +40,7 @@
                     <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
                 </div>
             </li>
-            <li class="col4">
+            <li class="col4 sale-slider-column">
                 <div class="sale-column">
                     <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
                     <h3>Python J100</h3>
@@ -107,7 +55,22 @@
                     <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
                 </div>
             </li>
-            <li class="col4-last">
+            <li class="col4 sale-slider-column">
+                <div class="sale-column">
+                    <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
+                    <h3>Python J100</h3>
+                    <ul class="list">
+                        <li>Lorem ipsum dolor sit amet</li>
+                        <li>Adipisicing elit sed do eiusmod</li>
+                        <li>Incididunt labore dolore magna</li>
+                    </ul>
+                    <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
+                    <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
+                    <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
+                    <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
+                </div>
+            </li>
+            <li class="col4 sale-slider-column">
                 <div class="sale-column">
                     <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
                     <h3>Python J100</h3>
@@ -124,8 +87,8 @@
             </li>
         </ul>
         <!-- Indicators -->
-        <a href="javascript:void(0);" class="left ico ico-carousel-arrow-left slidethis-prev" data-slidethis="id|awards"></a>
-        <a href="javascript:void(0);" class="right ico ico-carousel-arrow-right slidethis-next" data-slidethis="id|awards"></a>    
+        <a href="javascript:void(0);" class="slidethis-controls slidethis-prev" data-slidethis="id|bikes"><i class="ico ico-left-arrow ico-text slider-normal">Prev</i><i class="ico ico-left-arrow-alternate ico-text slider-hover">Prev</i></a>
+        <a href="javascript:void(0);" class="slidethis-controls slidethis-next" data-slidethis="id|bikes"><i class="ico ico-right-arrow ico-text slider-normal">Next</i><i class="ico ico-right-arrow-alternate ico-text slider-hover">Next</i></a>     
     </div>
 </section>
 {% contentfor inlinescripts %}
