--- a/app/_scss/_content.scss
+++ b/app/_scss/_content.scss
@@ -32,7 +32,7 @@
     margin-top: 3.75em; //60px
 }
 
-.best-sale-container {
+.best-sale-slider-container {
     padding-left: 0;
     padding-right: 0;
 }
