--- a/app/_scss/_variables.scss
+++ b/app/_scss/_variables.scss
@@ -28,3 +28,5 @@ $main-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 //base font size
 $base-font-size: 16px;
 
+//sales slider controls height
+$sales-slider-controls-height: 120px;
