--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -21,24 +21,27 @@
             <a href="#" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
             <ul class="menu-list">
                 <li><a class="active" href="#">Motocicletas</a>
-                    <ul class=" sub-menu">
+                    <ul class=" sub-menu slidethis equalHeight" data-slidethis="id|awards,animate|true,delay|20,speed|300">
                         <li>
                             <img src="/img/menu-moto1.jpg" alt="P600" >
                             <p>Serpento P600</p>
                         </li>
                         <li>
                             <img src="/img/menu-moto2.jpg" alt="P600" >
-                            <p>Serpento P600</p>
+                            <p>Serpento XR7000</p>
                         </li>
                         <li>
                             <img src="/img/menu-moto3.jpg" alt="P600" >
-                            <p>Serpento P600</p>
+                            <p>Serpento V8</p>
                         </li>
                         <li>
                             <img src="/img/menu-moto4.jpg" alt="P600" >
-                            <p>Serpento P600</p>
+                            <p>Serpento V800</p>
                         </li>
                     </ul>
+                    <!-- Indicators -->
+                    <a href="javascript:void(0);" class="left slidethis-prev" data-slidethis="id|awards"></a>
+                    <a href="javascript:void(0);" class="right slidethis-next" data-slidethis="id|awards"></a>    
                 </li>
                 
                 <li><a href="#">Accesorios</a></li>
@@ -50,14 +53,12 @@
         </div>
     </nav>
 </header>
-
 {% contentfor inlinescripts %}
 <script type="text/javascript">
     $(document).ready(function(){
-        $('.bxslider111').bxSlider({
-            pager: false
+        $('.equalHeight').setColumnsEqualHeight({
+            parentHasHeight: true
         });
     });
 </script>
 {% endcontentfor %}
-
