--- a/app/_scss/_header.scss
+++ b/app/_scss/_header.scss
@@ -132,7 +132,12 @@
         }
 
         p {
-            margin-bottom: 0;
+            bottom: 0;
+            left: 0;
+            margin: 0;
+            position: absolute;
+            right: 0;
+            text-align: center;
         }
     }
 
