progress in serpento

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -21,7 +21,10 @@
             <a href="#" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
             <ul class="menu-list">
                 <li><a class="active" href="#">Motocicletas</a>
-                    <ul class=" sub-menu slidethis equalHeight" data-slidethis="id|awards,animate|true,delay|20,speed|300">
+                    
+                    <div class="sub-menu">
+                    <div class="first-category"> </div>
+                    <ul class=" slidethis equalHeight" data-slidethis="id|awards,animate|true,delay|20,speed|300">
                         <li>
                             <img src="/img/menu-moto1.jpg" alt="P600" >
                             <p>Serpento P600</p>
@@ -39,6 +42,7 @@
                             <p>Serpento V800</p>
                         </li>
                     </ul>
+                    </div>
                     <!-- Indicators -->
                     <a href="javascript:void(0);" class="left slidethis-prev" data-slidethis="id|awards"></a>
                     <a href="javascript:void(0);" class="right slidethis-next" data-slidethis="id|awards"></a>    
