--- a/app/_scss/_header.scss
+++ b/app/_scss/_header.scss
@@ -115,29 +115,43 @@
         }
     }
 
+    .first-category{
+        background-color: #ffc000;
+        bottom: 0;
+        position: absolute;
+        top: 0;
+        width: 200px;
+    }
+
     .sub-menu {
         background-color: #FFFFFF;
         left: 0;
         padding: 30px 0;
         position: absolute;
-        overflow: hidden;
-        text-align: left;
         width: 100%;
         z-index: 11;
 
-        > li {
-            list-style: none;
-            background-color: red;
-            float: left;
-        }
+        ul {
+            margin: 0 0 0 525px;
+            overflow: hidden;
+            text-align: left;
+            
 
-        p {
-            bottom: 0;
-            left: 0;
-            margin: 0;
-            position: absolute;
-            right: 0;
-            text-align: center;
+            > li {
+                list-style: none;
+                background-color: red;
+                float: left;
+                width: 152px;
+            }
+
+            p {
+                bottom: 0;
+                left: 0;
+                margin: 0;
+                position: relative;
+                right: 0;
+                text-align: center;
+            }
         }
     }
 
