--- a/app/_includes/home/best-sale.html
+++ b/app/_includes/home/best-sale.html
@@ -25,66 +25,21 @@
     </div>
     <div class="best-sale-slider">
         <ul class="container best-sale-slider-container slidethis pafClase" data-slidethis="id|bikes,animate|true,delay|20,speed|300">
-            <li class="col4 sale-slider-column sale-slider-column">
-                <div class="sale-column active">
-                    <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
-                    <h3>Python J100</h3>
-                    <ul class="list">
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Adipisicing elit sed do eiusmod</li>
-                        <li>Incididunt labore dolore magna</li>
-                    </ul>
-                    <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                    <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
-                    <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
-                    <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
-                </div>
-            </li>
-            <li class="col4 sale-slider-column">
-                <div class="sale-column">
-                    <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
-                    <h3>Python J100</h3>
-                    <ul class="list">
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Adipisicing elit sed do eiusmod</li>
-                        <li>Incididunt labore dolore magna</li>
-                    </ul>
-                    <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                    <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
-                    <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
-                    <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
-                </div>
-            </li>
-            <li class="col4 sale-slider-column">
-                <div class="sale-column">
-                    <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
-                    <h3>Python J100</h3>
-                    <ul class="list">
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Adipisicing elit sed do eiusmod</li>
-                        <li>Incididunt labore dolore magna</li>
-                    </ul>
-                    <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                    <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
-                    <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
-                    <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
-                </div>
-            </li>
-            <li class="col4 sale-slider-column">
-                <div class="sale-column">
-                    <img class="best-sale-product" src="/img/python-j100.png" alt="Python J100">
-                    <h3>Python J100</h3>
-                    <ul class="list">
-                        <li>Lorem ipsum dolor sit amet</li>
-                        <li>Adipisicing elit sed do eiusmod</li>
-                        <li>Incididunt labore dolore magna</li>
-                    </ul>
-                    <p class="price-container"><span class="price price-medium price-tile">¢50.000</span><strong>FINANCIADO A 16 MESES</strong></p>
-                    <p class="price-container"><span class="price price-small price-tile">¢750.000</span><strong>AL CONTADO</strong></p>
-                    <a href="#" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
-                    <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
-                </div>
-            </li>
+            {% for page in site.pages %}
+                {% if page.is-bike == true %}
+                    <li class="col4 sale-slider-column sale-slider-column">
+                        <div class="sale-column active">
+                            <img class="best-sale-product" src="{{ page.small-bike-img }}" alt="Python J100">
+                            <h3>{{ page.model }}</h3>
+                            {% include modules/feature-list.html %}
+                            <p class="price-container"><span class="price price-medium price-tile">{{ page.financed-price }}</span><strong>FINANCIADO A {{ page.financed-period }} MESES</strong></p>
+                            <p class="price-container"><span class="price price-small price-tile">{{ page.cash-price }}</span><strong>AL CONTADO</strong></p>
+                            <a href="{{ page.more-info-url }}" class="ribbon"><i class="ico ico-ribbon-base"></i><span class="ribbon-content"><strong>MAS INFORMACION</strong><i class="ico ico-gt"></i></span><i class="ico ico-ribbon-point"></i></a>
+                            <a href="#">Comparar Modelos<i class="ico ico-gt-small"></i></a>
+                        </div>
+                    </li>
+                {% endif %}      
+            {% endfor %}
         </ul>
         <!-- Indicators -->
         <a href="javascript:void(0);" class="slidethis-controls slidethis-prev" data-slidethis="id|bikes"><i class="ico ico-left-arrow ico-text slider-normal">Prev</i><i class="ico ico-left-arrow-alternate ico-text slider-hover">Prev</i></a>
