--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -23,29 +23,30 @@
                 <li><a class="active" href="#">Motocicletas</a>
                     
                     <div class="sub-menu">
-                    <div class="first-category"> </div>
-                    <ul class=" slidethis equalHeight" data-slidethis="id|awards,animate|true,delay|20,speed|300">
-                        <li>
-                            <img src="/img/menu-moto1.jpg" alt="P600" >
-                            <p>Serpento P600</p>
-                        </li>
-                        <li>
-                            <img src="/img/menu-moto2.jpg" alt="P600" >
-                            <p>Serpento XR7000</p>
-                        </li>
-                        <li>
-                            <img src="/img/menu-moto3.jpg" alt="P600" >
-                            <p>Serpento V8</p>
-                        </li>
-                        <li>
-                            <img src="/img/menu-moto4.jpg" alt="P600" >
-                            <p>Serpento V800</p>
-                        </li>
-                    </ul>
+                        <div class="first-category"><i class="ico-tringle-menu ico border-category"></i></div>
+                        <ul class=" slidethis" data-slidethis="id|awards,animate|true,delay|20,speed|300">
+                            <li>
+                                <img src="/img/menu-moto1.jpg" alt="P600" >
+                                <p>Serpento P600</p>
+                            </li>
+                            <li>
+                                <img src="/img/menu-moto2.jpg" alt="P600" >
+                                <p>Serpento XR7000</p>
+                            </li>
+                            <li>
+                                <img src="/img/menu-moto3.jpg" alt="P600" >
+                                <p>Serpento V8</p>
+                            </li>
+                            <li>
+                                <img src="/img/menu-moto4.jpg" alt="P600" >
+                                <p>Serpento V800</p>
+                            </li>
+                        </ul>
+                        <!-- Indicators -->
+                        <a href="javascript:void(0);" data-slidethis="id|awards" class="left slidethis-prev prev"><i class="img-left-arrow img-arrow ico ico-left-arrow ico-text">Prev</i></a>
+                        <a href="javascript:void(0);" data-slidethis="id|awards" class="right slidethis-next next"><i class="img-right-arrow img-arrow ico ico-right-arrow ico-text">Next</i></a>  
                     </div>
-                    <!-- Indicators -->
-                    <a href="javascript:void(0);" class="left slidethis-prev" data-slidethis="id|awards"></a>
-                    <a href="javascript:void(0);" class="right slidethis-next" data-slidethis="id|awards"></a>    
+                      
                 </li>
                 
                 <li><a href="#">Accesorios</a></li>
@@ -60,9 +61,7 @@
 {% contentfor inlinescripts %}
 <script type="text/javascript">
     $(document).ready(function(){
-        $('.equalHeight').setColumnsEqualHeight({
-            parentHasHeight: true
-        });
+        
     });
 </script>
 {% endcontentfor %}
