Add motorcicle layout

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -20,7 +20,7 @@
         <div class="container">
             <a href="#" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
             <ul class="menu-list">
-                <li><a class="active" href="#">Motocicletas</a>
+                <li><a class="active" href="bikes.html">Motocicletas</a>
                     <ul class=" sub-menu">
                         <li>
                             <img src="/img/menu-moto1.jpg" alt="P600" >
