--- a/app/_scss/_header.scss
+++ b/app/_scss/_header.scss
@@ -116,6 +116,7 @@
     }
 
     .sub-menu {
+        display: none;
         background-color: #FFFFFF;
         left: 0;
         padding: 30px 0;
