Add content and styles for bikes page

--- a/app/_includes/home/best-sale.html
+++ b/app/_includes/home/best-sale.html
@@ -28,7 +28,7 @@
             {% for page in site.pages %}
                 {% if page.is-bike == true %}
                     <li class="col4 sale-slider-column sale-slider-column">
-                        <div class="sale-column active">
+                        <div class="sale-column">
                             <img class="best-sale-product" src="{{ page.small-bike-img }}" alt="Python J100">
                             <h3>{{ page.model }}</h3>
                             {% include modules/feature-list.html %}
