--- a/app/_scss/_content.scss
+++ b/app/_scss/_content.scss
@@ -125,4 +125,52 @@
 /*
 ** Bikes
 */ 
+.bike-header-container {
+    padding-bottom: 3.5em; //35px
+    padding-top: 3.5em; //35px
+    border-bottom: 1px solid #e0e0e0;
+    box-shadow: 0px 7px 10px #e0e0e0;
+}
 
+.bike-content-container {
+    > div:last-child {
+        .bikes-container {
+            padding-bottom: 3.75em; //60px
+        }
+    }
+
+    > .bikes-container:first-child {
+        padding-top: 5em; //80px
+    }
+
+    > .bikes-container:last-child {
+            padding-bottom: 3.75em; //60px
+    }
+
+    > div:first-child {
+        .bikes-container {
+            padding-top: 5em; //80px
+        }        
+    }
+}
+
+.bikes-container {
+    padding-bottom: 1.875em; //30px
+    padding-top: 1.875em; //30px
+}
+
+.bikes-features {
+    > .list {
+        color: $base-font-color;
+    }
+
+    > p {
+        color: $base-font-color;
+        line-height: 1;
+    }
+
+    > .ribbon {
+        display: block;
+        margin-bottom: 2.142857143em; //30px
+    }
+}
