--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -17,6 +17,7 @@
 
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://modernizr.com/downloads/modernizr-latest.js"></script>
+        <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 
 
