--- a/app/_includes/home/slider/slider-2.html
+++ b/app/_includes/home/slider/slider-2.html
@@ -1,5 +1,5 @@
 <section class="main-banner has-rotated">
-    <div class="main-banner-image"></div>
+    <div class="main-banner-image green-bike"></div>
     <div class="main-banner-container actual-bg-height">
         <div class="container">
             <div class="col6 main-banner-content">
