--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -18,7 +18,7 @@
     </section>
     <nav class="header-bottom">
         <div class="container">
-            <a href="#" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
+            <a href="../" class="logo"><i class="ico ico-logo ico-text">Serpento</i></a>
             <ul class="menu-list">
                 <li><a class="active has-sub-menu" href="bikes.html" data-showsubmenu=".motos" >Motocicletas</a>
                     <div class="sub-menu motos">
